--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Example
 
 ::
 
-   $ codesearch.debian.net -w '[0-9]*[2-9][1-3]th' filetype:perl
+   $ dcs-cli -w '[0-9]*[2-9][1-3]th' filetype:perl
    Query: \b[0-9]*[2-9][1-3]th\b filetype:perl
    Results: 4
    Packages: 4 (yudit libschedule-cron-events-perl libcatmandu-perl kanjipad)
