--- a/README
+++ b/README
@@ -5,40 +5,32 @@ Example
 
    $ dcs-cli -w '[0-9]*[2-9][1-3]th' filetype:perl
    Query: \b[0-9]*[2-9][1-3]th\b filetype:perl
-   Results: 4
-   Packages: 4 (yudit libschedule-cron-events-perl libcatmandu-perl kanjipad)
+   Results: 3
+   Packages: 3 (libschedule-cron-events-perl yudit libcatmandu-perl)
 
-   libcatmandu-perl_1.0304-2/t/Catmandu-Fix-replace_all.t:19:
+   libcatmandu-perl_1.2020-1/t/Catmandu-Fix-replace_all.t:19:
    |
    | is_deeply $pkg->new('date', '(\d{2})', '${1}th')->fix({date => "July 23"}),
    >     {date => "July 23th"}, "interpolation works";
    |
    | is_deeply $pkg->new('words', '/b', '')->fix({words => "/bar"}),
-   (pathrank 2.1876, rank 2.2883)
+   (pathrank 2.2090, rank 2.3106)
 
-   kanjipad_2.0.0-8/jstroke/angles.pl:62:
-   | # ----- ang32 ----------------------------------------------------------------
-   | # For given int $xdif and $ydif, calculate atan2 (the angle from origin)
-   > # in 32th's of a circle from 0 to 32, rather than radians.  Note that it
-   | # returns 32 iff $xdif and $ydif are both zero, an ill-defined case.
-   | # Origin and direction are clockwise:
-   (pathrank 1.8235, rank 1.9284)
-
-   libschedule-cron-events-perl_1.95-1/lib/Schedule/Cron/Events.pm:338:
+   libschedule-cron-events-perl_1.96-2/lib/Schedule/Cron/Events.pm:340:
    |       confess("Cron line [" . $self->{'initline'} . "] does not define any valid point in time, checked years: [" .
    |           join(",", @{$self->{'set_e_checked_years'}}) .
    >           "] (ex, 31th of February) ");
    |     }
    |   }
-   (pathrank 1.8234, rank 1.9179)
+   (pathrank 1.8234, rank 1.9187)
 
-   yudit_2.9.6-7/bin/angles.pl:62:
+   yudit_3.1.0-1/bin/angles.pl:62:
    | # ----- ang32 ----------------------------------------------------------------
    | # For given int $xdif and $ydif, calculate atan2 (the angle from origin)
    > # in 32th's of a circle from 0 to 32, rather than radians.  Note that it
    | # returns 32 iff $xdif and $ydif are both zero, an ill-defined case.
    | # Origin and direction are clockwise:
-   (pathrank 2.0980, rank 2.2029)
+   (pathrank 2.1166, rank 2.2224)
 
 Prerequisites
 =============
